Se enlazan archivos de diseño y logica

--- a/January/index.html
+++ b/January/index.html
@@ -4,11 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edward Sierra Landing Page</title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
 </head>
 <body>
     <header>
         <h1>Edward</h1>
-        <p>Desarrollador Web | QA | Apasionado por la tecnología</p>
+        <p>Desarrollador Web | QA | Desarrollador web Full Stack</p>
         <nav>
           <ul>
             <li><a href="#about">Sobre mí</a></li>
